# msh2vtu

./: .gitignore  AUTHORS  LICENSE  README.md  TODO  msh2vtu.py  run_tests  setup.cfg
example/: geolayers_2d.msh
examples/: geoterrain_3d.msh
howto_gmsh/: mesh_and_convert_square_tri.py  mesh_cube_hex.py  mesh_cube_tet.py  mesh_line.py  mesh_quarter_of_rectangle_with_hole.py  mesh_rectangle_quad.py  mesh_rectangle_tri.py  mesh_square_quad.py  mesh_square_tri.py
howto_mesh_terrain/: Readme.md  gmsh_mesh.py  grd2stl.py  ground.grd  layer_file_list  ogs_createLayeredMeshFromRaster.sh  pyvista_mesh.py  relief.grd  tetgen_example.py  tetgen_mesh.py
msh2vtu/: __init__.py  __main__.py  msh2vtu.py
msh2vtu_pkg/: msh2vtu.py
tests/: context.py  cube_tet.geo  cube_tet.msh  intro.py  read_tests_meshs.py  square_quad.geo  square_quad.msh  square_tri.geo  square_tri.msh  square_with_circular_hole.geo  square_with_circular_hole.msh  test_standard_meshes.py
tools/: README.md  result2bc.py
