[metadata]
# replace with your username:
name = msh2vtu
version = 0.0.1
author = Dominik Kern
author_email = dominik.kern.ifgt@gmail.com
description = Converting Gmsh-files to vtu-format for use in OpenGeoSys
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/dominik-kern/msh2vtu
project_urls =
    Bug Tracker = https://github.com/dominik-kern/msh2vtu/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = find:
python_requires = >=3.8

